# QuestionAnswerSystem_LLAMAINDEX_GEMINI_PRO

./: Exception.py  README.md  StreamlitApp.py  logger.py  pyproject.toml  template.py
Data/: ML.txt
Experiments/: experiments.ipynb
QASystem.egg-info/: PKG-INFO  SOURCES.txt
QAwithpdf/: data_ingestion.py  embedding.py  model_api.py
QAwithpdf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebook/storage/: default__vector_store.json  docstore.json  index_store.json
