[build-systems]
requires=["setuptools>=64","wheel"]
build_backend="setuptools.build_meta"

[project]
name="QAwithpdf"
version="0.0.1"
description="Question Answer system based on a given text"
authors=[{name="Jisna Patharakkal",email="jisna12@gmail.com"}]
dependencies=['llama-index','google-generativeai','llama-index-llms-gemini',
                      'pypdf','python-dotenv','Ipython',
                      'llama-index-embeddings-gemini','streamlit']

[tool.setuptools]
packages=["QAwithpdf"]
